--- a/examples/compose.yaml
+++ b/examples/compose.yaml
@@ -61,10 +61,10 @@ services:
       container_name: milvus-etcd
       image: quay.io/coreos/etcd:v3.5.18
       environment:
-          - ETCD_AUTO_COMPACTION_MODE=revision
-          - ETCD_AUTO_COMPACTION_RETENTION=1000
-          - ETCD_QUOTA_BACKEND_BYTES=4294967296
-          - ETCD_SNAPSHOT_COUNT=50000
+          ETCD_AUTO_COMPACTION_MODE: revision
+          ETCD_AUTO_COMPACTION_RETENTION: 1000
+          ETCD_QUOTA_BACKEND_BYTES: 4294967296
+          ETCD_SNAPSHOT_COUNT: 50000
       volumes:
           - etcd_vlm:/etcd
       command: etcd -advertise-client-urls=http://etcd:2379 -listen-client-urls http://0.0.0.0:2379 --data-dir /etcd
