--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,4 @@
-demo @chr-hertel
+demo @chr-hertel @OskarStark
 examples @chr-hertel @OskarStark
 fixtures @chr-hertel @OskarStark
 src @chr-hertel @Nyholm @OskarStark
