--- a/examples/composer.json
+++ b/examples/composer.json
@@ -1,14 +1,14 @@
 {
     "name": "symfony/ai-examples",
     "description": "Example scripts about using Symfony AI",
-    "type": "project",
     "license": "MIT",
+    "type": "project",
     "require": {
         "ext-pdo": "*",
         "async-aws/bedrock-runtime": "^1.1",
         "codewithkyrian/chromadb-php": "^0.4.0",
         "codewithkyrian/transformers": "^0.6.1",
-        "doctrine/dbal": "^3.3|^4.0",
+        "doctrine/dbal": "^3.3 || ^4.0",
         "google/auth": "^1.47",
         "mongodb/mongodb": "^2.1",
         "mrmysql/youtube-transcript": "^0.0.5",
@@ -18,16 +18,16 @@
         "symfony/ai-agent": "@dev",
         "symfony/ai-platform": "@dev",
         "symfony/ai-store": "@dev",
-        "symfony/cache": "^6.4|^7.0",
-        "symfony/console": "^6.4|^7.0",
-        "symfony/css-selector": "^6.4|^7.0",
-        "symfony/dom-crawler": "^6.4|^7.0",
-        "symfony/dotenv": "^6.4|^7.0",
-        "symfony/event-dispatcher": "^6.4|^7.0",
-        "symfony/filesystem": "^6.4|^7.0",
-        "symfony/finder": "^6.4|^7.0",
-        "symfony/process": "^6.4|^7.0",
-        "symfony/var-dumper": "^6.4|^7.0"
+        "symfony/cache": "^6.4 || ^7.0",
+        "symfony/console": "^6.4 || ^7.0",
+        "symfony/css-selector": "^6.4 || ^7.0",
+        "symfony/dom-crawler": "^6.4 || ^7.0",
+        "symfony/dotenv": "^6.4 || ^7.0",
+        "symfony/event-dispatcher": "^6.4 || ^7.0",
+        "symfony/filesystem": "^6.4 || ^7.0",
+        "symfony/finder": "^6.4 || ^7.0",
+        "symfony/process": "^6.4 || ^7.0",
+        "symfony/var-dumper": "^6.4 || ^7.0"
     },
     "autoload": {
         "psr-4": {
