--- a/.github/workflows/run-examples.yaml
+++ b/.github/workflows/run-examples.yaml
@@ -4,6 +4,10 @@ on:
     pull_request:
         types: [labeled]
 
+defaults:
+    run:
+        working-directory: examples
+
 jobs:
     run-examples:
         if: github.event.label.name == 'Run examples'
@@ -13,10 +17,22 @@ jobs:
             - name: Checkout code
               uses: actions/checkout@v4
 
-            - name: Echo Hello World
-              run: echo "Hello World"
+            - name: Setup PHP
+              uses: shivammathur/setup-php@v2
+              with:
+                  php-version: '8.2'
+
+            - name: Install dependencies
+              uses: ramsey/composer-install@v3
+              with:
+                  working-directory: "examples"
+
+            - name: Run OpenAI examples
+              id: run-examples
+              run: ./runner openai
 
             - name: Remove label
+              if: always()
               uses: actions/github-script@v7
               with:
                   script: |
