--- a/examples/composer.json
+++ b/examples/composer.json
@@ -4,6 +4,7 @@
     "license": "MIT",
     "type": "project",
     "require": {
+        "php": ">=8.2",
         "ext-pdo": "*",
         "async-aws/bedrock-runtime": "^1.1",
         "codewithkyrian/chromadb-php": "^0.4.0",
