--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
     "require-dev": {
         "php": ">=8.2",
         "php-cs-fixer/shim": "^3.75",
-        "symfony/finder": "^6.4 || ^7.0",
-        "symfony/filesystem": "^6.4 || ^7.0"
+        "symfony/filesystem": "^6.4 || ^7.0",
+        "symfony/finder": "^6.4 || ^7.0"
     },
     "config": {
         "sort-packages": true
