--- a/src/mcp-bundle/composer.json
+++ b/src/mcp-bundle/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "symfony/mcp-bundle",
-    "type": "symfony-bundle",
     "description": "Symfony integration bundle for Model Context Protocol (via symfony/mcp-sdk)",
     "license": "MIT",
+    "type": "symfony-bundle",
     "authors": [
         {
             "name": "Christopher Hertel",
@@ -23,9 +23,8 @@
         "phpstan/phpstan": "^2.1",
         "phpunit/phpunit": "^11.5"
     },
-    "config": {
-        "sort-packages": true
-    },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "autoload": {
         "psr-4": {
             "Symfony\\AI\\McpBundle\\": "src/"
@@ -36,6 +35,7 @@
             "Symfony\\AI\\PHPStan\\": "../../.phpstan"
         }
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+    "config": {
+        "sort-packages": true
+    }
 }
