--- a/src/mcp-bundle/phpunit.xml.dist
+++ b/src/mcp-bundle/phpunit.xml.dist
@@ -11,7 +11,7 @@
          failOnRisky="true"
          failOnWarning="true">
     <testsuites>
-        <testsuite name="default">
+        <testsuite name="symfony/mcp-bundle">
             <directory>tests</directory>
         </testsuite>
     </testsuites>
