[PHPStan] Add rule to forbid test coverage attributes

--- a/.phpstan/extension.neon
+++ b/.phpstan/extension.neon
@@ -1,3 +1,4 @@
 rules:
     - Symfony\AI\PHPStan\ForbidDeclareStrictTypesRule
     - Symfony\AI\PHPStan\ForbidNativeExceptionRule
+    - Symfony\AI\PHPStan\ForbidTestCoverageAttributesRule
