--- a/.phpstan/extension.neon
+++ b/.phpstan/extension.neon
@@ -2,3 +2,4 @@ rules:
     - Symfony\AI\PHPStan\ForbidDeclareStrictTypesRule
     - Symfony\AI\PHPStan\ForbidNativeExceptionRule
     - Symfony\AI\PHPStan\ForbidTestCoverageAttributesRule
+    - Symfony\AI\PHPStan\ForbidEmptyRule
