--- a/examples/composer.json
+++ b/examples/composer.json
@@ -29,6 +29,7 @@
         "symfony/event-dispatcher": "^7.3|^8.0",
         "symfony/filesystem": "^7.3|^8.0",
         "symfony/finder": "^7.3|^8.0",
+        "symfony/http-foundation": "^7.3|^8.0",
         "symfony/process": "^7.3|^8.0",
         "symfony/var-dumper": "^7.3|^8.0"
     },
