Introduce getters and metadata to message classes

--- a/src/chat/composer.json
+++ b/src/chat/composer.json
@@ -21,7 +21,8 @@
     ],
     "require": {
         "php": ">=8.2",
-        "symfony/ai-agent": "@dev"
+        "symfony/ai-agent": "@dev",
+        "symfony/ai-platform": "@dev"
     },
     "require-dev": {
         "phpstan/phpstan": "^2.0",
