--- a/demo/.env
+++ b/demo/.env
@@ -22,3 +22,4 @@ APP_SECRET=ccb9dca72dce53c683eaaf775bfdb253
 CHROMADB_HOST=chromadb
 CHROMADB_PORT=8080
 OPENAI_API_KEY=sk-...
+HUGGINGFACE_API_KEY=hf-...
