--- a/demo/config/packages/ai.yaml
+++ b/demo/config/packages/ai.yaml
@@ -2,8 +2,11 @@ ai:
     platform:
         openai:
             api_key: '%env(OPENAI_API_KEY)%'
+        huggingface:
+            api_key: '%env(HUGGINGFACE_API_KEY)%'
     agent:
         blog:
+            platform: 'ai.platform.openai'
             model: 'gpt-4o-mini'
             tools:
                 - 'Symfony\AI\Agent\Toolbox\Tool\SimilaritySearch'
@@ -12,14 +15,17 @@ ai:
                   description: 'Provides the current date and time.'
                   method: 'now'
         stream:
+            platform: 'ai.platform.openai'
             model: 'gpt-4o-mini'
             prompt:
                 file: '%kernel.project_dir%/prompts/stream-chat.txt'
             tools: false
         youtube:
+            platform: 'ai.platform.openai'
             model: 'gpt-4o-mini'
             tools: false
         wikipedia:
+            platform: 'ai.platform.openai'
             model:
                 name: 'gpt-4o-mini'
                 options:
@@ -31,6 +37,7 @@ ai:
                 - 'Symfony\AI\Agent\Toolbox\Tool\Wikipedia'
             include_sources: true
         audio:
+            platform: 'ai.platform.openai'
             model: 'gpt-4o-mini?temperature=1.0'
             prompt: 'You are a friendly chatbot that likes to have a conversation with users and asks them some questions.'
             tools:
@@ -39,14 +46,17 @@ ai:
                   name: 'symfony_blog'
                   description: 'Can answer questions based on the Symfony blog.'
         orchestrator:
+            platform: 'ai.platform.openai'
             model: 'gpt-4o-mini'
             prompt: 'You are an intelligent agent orchestrator that routes user questions to specialized agents.'
             tools: false
         technical:
+            platform: 'ai.platform.openai'
             model: 'gpt-4o-mini'
             prompt: 'You are a technical support specialist. Help users resolve bugs, problems, and technical errors.'
             tools: false
         fallback:
+            platform: 'ai.platform.openai'
             model: 'gpt-4o-mini'
             prompt: 'You are a helpful general assistant. Assist users with any questions or tasks they may have.'
             tools: false
@@ -62,6 +72,7 @@ ai:
                 collection: 'symfony_blog'
     vectorizer:
         openai:
+            platform: 'ai.platform.openai'
             model: 'text-embedding-ada-002'
     indexer:
         blog:
