--- a/demo/config/routes.yaml
+++ b/demo/config/routes.yaml
@@ -18,6 +18,12 @@ blog:
         template:  'chat.html.twig'
         context: { chat: 'blog' }
 
+crop:
+    path: '/crop'
+    controller: 'Symfony\Bundle\FrameworkBundle\Controller\TemplateController'
+    defaults:
+        template:  'crop.html.twig'
+
 stream:
     path: '/stream'
     controller: 'Symfony\Bundle\FrameworkBundle\Controller\TemplateController'
