--- a/demo/config/packages/ai.yaml
+++ b/demo/config/packages/ai.yaml
@@ -39,12 +39,19 @@ ai:
         audio:
             platform: 'ai.platform.openai'
             model: 'gpt-4o-mini?temperature=1.0'
-            prompt: 'You are a friendly chatbot that likes to have a conversation with users and asks them some questions.'
+            prompt: |
+                You are a friendly, positive and energetic voice assistant. You can engage in light discussions, ask
+                questions, and do general small-talk. If asked about the Symfony Framework or their community events,
+                you delegate to your subagent "symfony_blog" and use their answer for answering user's questions.
+                If you don't know the answer, say so. Keep in mind that you are in a spoken conversation, so keep your
+                answers concise and to the point. They will be read out loud to the user.
             tools:
                 # Agent in agent 🤯
                 - agent: 'blog'
                   name: 'symfony_blog'
-                  description: 'Can answer questions based on the Symfony blog.'
+                  description: |
+                      Subagent, that can answer questions about latest news around the Symfony Framework, like latest
+                      features, events or community news.
         orchestrator:
             platform: 'ai.platform.openai'
             model: 'gpt-4o-mini'
