--- a/src/chat/composer.json
+++ b/src/chat/composer.json
@@ -26,6 +26,7 @@
     },
     "require-dev": {
         "ext-redis": "*",
+        "doctrine/dbal": "^3.3 || ^4.0",
         "phpstan/phpstan": "^2.0",
         "phpstan/phpstan-strict-rules": "^2.0",
         "phpunit/phpunit": "^11.5.13",
