--- a/demo/config/services.yaml
+++ b/demo/config/services.yaml
@@ -18,3 +18,5 @@ services:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
             - '../src/Kernel.php'
+
+    Symfony\Component\Serializer\Normalizer\PropertyNormalizer: ~
